Adding Fabric with Crashlytics support

--- a/Serendipity/Info.plist
+++ b/Serendipity/Info.plist
@@ -31,6 +31,20 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>0</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>c1afe3ecfc536b752df1c1789daab85a27e52bb1</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>FacebookAppID</key>
 	<string>788119904575103</string>
 	<key>FacebookDisplayName</key>
