--- a/Serendipity/Info.plist
+++ b/Serendipity/Info.plist
@@ -28,6 +28,14 @@
 				<string>fb788119904575103</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb788565417863885</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>0</string>
@@ -46,7 +54,7 @@
 		</array>
 	</dict>
 	<key>FacebookAppID</key>
-	<string>788119904575103</string>
+	<string>788565417863885</string>
 	<key>FacebookDisplayName</key>
 	<string>Serendipity</string>
 	<key>LSApplicationCategoryType</key>
