Change default app id to com.milasya.ketch.dev, adding build settings BUNDLE_VERSION_STRING, BUNDLE_IDENTIFER and BUNDLE_BUILD

--- a/Ketch/Ketch-Info.plist
+++ b/Ketch/Ketch-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>co.ketchy.ketch</string>
+	<string>$(BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1</string>
+	<string>$(BUNDLE_VERSION_STRING)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0</string>
+	<string>$(BUNDLE_BUILD)</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
