--- a/Ketch/Configs/Dev.xcconfig
+++ b/Ketch/Configs/Dev.xcconfig
@@ -5,3 +5,7 @@
 //  Created by Tony Xiao on 2/28/15.
 //  Copyright (c) 2015 Ketch. All rights reserved.
 //
+
+BUNDLE_IDENTIFIER = com.milasya.ketch.dev
+BUNDLE_DISPLAY_NAME = Ketch Dev
+CODE_SIGN_IDENTITY = iPhone Developer
