Further customizing the xcconfig files to allow ipa builds to work
e.g. ipa build -s Ketch --xcconfig Ketch/Configs/Beta.xcconfig

--- a/Ketch/Configs/Beta.xcconfig
+++ b/Ketch/Configs/Beta.xcconfig
@@ -8,5 +8,5 @@
 
 BUNDLE_IDENTIFIER = com.milasya.ketch.beta
 BUNDLE_DISPLAY_NAME = Ketch Beta
-CODE_SIGN_IDENTITY = iPhone Distribution
-PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
+CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
+CUSTOM_PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
