Separate facebook apps for each of the different environments https://app.asana.com/0/27526224232793/28223271855194

--- a/Ketch/Configs/Prod.xcconfig
+++ b/Ketch/Configs/Prod.xcconfig
@@ -9,3 +9,5 @@
 BUNDLE_IDENTIFIER = com.milasya.ketch
 BUNDLE_DISPLAY_NAME = Ketch
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
+FACEBOOK_APP_ID = 730107913748748
+FACEBOOK_DISPLAY_NAME = Ketch
