--- a/Ketch/Configs/Dev.xcconfig
+++ b/Ketch/Configs/Dev.xcconfig
@@ -9,3 +9,5 @@
 BUNDLE_IDENTIFIER = com.milasya.ketch.dev
 BUNDLE_DISPLAY_NAME = Ketch Dev
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Developer
+FACEBOOK_APP_ID = 788081301284742
+FACEBOOK_DISPLAY_NAME = Ketch Dev
