--- a/circle.yml
+++ b/circle.yml
@@ -6,17 +6,17 @@ machine:
 dependencies:
   pre:
     - sudo gem install cocoapods -v 0.36.0.beta.2
-    - sudo gem install cupertino shenzhen
+  #   - sudo gem install cupertino shenzhen
 
-  cache_directories:
-    - "Pods"
+  # cache_directories:
+  #   - "Pods"
 
-test:
-  override:
-    - ipa build -t --verbose --xcconfig Configs/Dev.xcconfig --xcargs BUNDLE_BUILD="$CIRCLE_BUILD_NUM"d
+# test:
+#   override:
+#     - ipa build -t --verbose --xcconfig Configs/Dev.xcconfig --xcargs BUNDLE_BUILD="$CIRCLE_BUILD_NUM"d
 
-deployment:
-  master:
-    branch: master
-    commands:
-      - ipa distribute:crashlytics -f Ketch.ipa -g team
+# deployment:
+#   master:
+#     branch: master
+#     commands:
+#       - ipa distribute:crashlytics -f Ketch.ipa -g team
