--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,8 @@ dependencies:
   pre:
     - sudo gem install cocoapods -v 0.36.0.beta.2
     - sudo gem install cupertino shenzhen
+    - ./scripts/import_credentials.sh
+
 
   cache_directories:
     - "Pods"
