--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,10 @@ machine:
 dependencies:
   pre:
     - ./scripts/import_credentials.sh
-    - sudo gem install cocoapods -v 0.36.0.beta.2
-    - sudo gem install cupertino shenzhen
+    - rvm list
+    - rvm use default
+    - gem install cocoapods -v 0.36.0.beta.2
+    - gem install cupertino shenzhen
 
   cache_directories:
     - "Pods"
