--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,11 @@ machine:
 
 dependencies:
   pre:
+    - sudo gem install cupertino
     - ./scripts/import_credentials.sh
+    - sudo gem install shenzhen
     - sudo gem install cocoapods -v 0.36.0.beta.2
-    - sudo gem install cupertino shenzhen
+
 
   cache_directories:
     - "Pods"
