--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,12 @@ dependencies:
 
 test:
   override:
-    - xcodebuild -workspace Ketch.xcworkspace -scheme Ketch -sdk iphonesimulator test | xcpretty -c
+    - |
+      set -o pipefail
+      xcodebuild -workspace $XCODE_WORKSPACE -scheme $XCODE_SCHEME -sdk iphonesimulator \
+                  test | xcpretty -c -r junit
+      mv build/reports/junit.xml $CIRCLE_TEST_REPORTS
+
   post:
     - ? |
         source ./scripts/env.sh
