--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,13 @@ machine:
 
 dependencies:
   pre:
-    - sudo gem install cocoapods -v 0.36.0.beta.2
+    - | 
+      POD_VERSION=$(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
+      if [ -z "$POD_VERSION" ]; then
+          echo "POD_VERSION could not be determined"
+          exit 1
+      fi
+      sudo gem install cocoapods -v $POD_VERSION
     - sudo gem install shenzhen cupertino
     - ./scripts/import_credentials.sh
   cache_directories:
