Save pods as build artifacts to make it possible to reproduce build locally

--- a/circle.yml
+++ b/circle.yml
@@ -44,3 +44,7 @@ deployment:
                                             -groupAliases team \
                                             -notifications NO \
                                             -notesPath release_notes.txt
+
+general:
+  artifacts:
+    - "Pods"
