--- a/circle.yml
+++ b/circle.yml
@@ -35,7 +35,7 @@ test:
 
 deployment:
   Ketch Dev:
-    branch: master
+    branch: [master, beta, prod]
     commands:
       - |
         source ./scripts/env.sh
