--- a/Configs/Beta.xcconfig
+++ b/Configs/Beta.xcconfig
@@ -7,7 +7,7 @@
 //
 
 BUNDLE_IDENTIFIER = com.milasya.ketch.beta
-BUNDLE_DISPLAY_NAME = Ketch Alpha
+BUNDLE_DISPLAY_NAME = Ketch Beta
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
 CUSTOM_PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
 FACEBOOK_APP_ID = 788081084618097
