--- a/Configs/Beta.xcconfig
+++ b/Configs/Beta.xcconfig
@@ -12,3 +12,4 @@ CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
 CUSTOM_PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
 FACEBOOK_APP_ID = 788081084618097
 FACEBOOK_DISPLAY_NAME = Ketch Beta
+ASSETCATALOG_COMPILER_APPICON_NAME = AppIconBeta
