--- a/Configs/Dev.xcconfig
+++ b/Configs/Dev.xcconfig
@@ -11,3 +11,4 @@ BUNDLE_DISPLAY_NAME = Ketch Dev
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Developer
 FACEBOOK_APP_ID = 788081301284742
 FACEBOOK_DISPLAY_NAME = Ketch Dev
+ASSETCATALOG_COMPILER_APPICON_NAME = AppIconDev
