--- a/Configs/Prod.xcconfig
+++ b/Configs/Prod.xcconfig
@@ -11,3 +11,4 @@ BUNDLE_DISPLAY_NAME = Ketch
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
 FACEBOOK_APP_ID = 730107913748748
 FACEBOOK_DISPLAY_NAME = Ketch
+ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
