--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
 
 test:
   # NOTE: This should really be post but disabling testing for now because Bugfender does not compile
-  test:
+  override:
     - echo "Skipping test because bugfender does not compile"
   post:
     - ? |
