Allow importing profivisioning profiles directly from apple again. Unpin shenzhen

--- a/circle.yml
+++ b/circle.yml
@@ -9,9 +9,7 @@ machine:
 dependencies:
   pre:
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
-     # Pin Shenzhen version until issue with highligh version incompatibility is resolved
-    - sudo gem install shenzhen -v 0.13.1
-    - sudo gem install cupertino
+    - sudo gem install cupertino shenzhen
     - ./scripts/import_credentials.sh
   override:
     - pod update Meteor
