--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ machine:
 dependencies:
   pre:
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
+    - sudo gem uninstall highline
     - sudo gem install cupertino shenzhen
     - ./scripts/import_credentials.sh
   override:
