Uninstall both highline and commander

--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ machine:
 dependencies:
   pre:
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
-    - sudo gem uninstall highline --ignore-dependencies
+    - sudo gem uninstall highline commander --ignore-dependencies
     - sudo gem install cupertino shenzhen
     - ./scripts/import_credentials.sh
   override:
