Better version of the hack, see if works

--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - sudo gem uninstall highline commander --ignore-dependencies -x
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
     - sudo gem install cupertino shenzhen sigh
-    - source ./scripts/circle_env.sh && ./scripts/import_credentials.sh
+    - ./scripts/import_credentials.sh
   override:
     - pod update Meteor
   cache_directories:
