Output verbose log into build.log

--- a/circle.yml
+++ b/circle.yml
@@ -24,9 +24,9 @@ test:
   post:
     - ? |
         source ./scripts/circle_env.sh
-        ipa build -t --xcconfig Configs/${XCCONFIG_NAME}.xcconfig \
-                     --xcargs BUNDLE_BUILD=$BN \
-                     --no-clean | tee $CIRCLE_ARTIFACTS/build.log
+        ipa build --xcconfig Configs/${XCCONFIG_NAME}.xcconfig \
+                  --xcargs BUNDLE_BUILD=$BN \
+                  --no-clean --verbose -t | tee $CIRCLE_ARTIFACTS/build.log
         mv Ketch.ipa $CIRCLE_ARTIFACTS/${BN}.ipa
         mv Ketch.app.dSYM.zip $CIRCLE_ARTIFACTS/${BN}.app.dSYM.zip
         ./scripts/circle_release_notes.sh >> $CIRCLE_ARTIFACTS/release_notes.txt
