Add custom url schemes to each ketch app type to help detect presence of other ketch apps

--- a/Configs/Beta.xcconfig
+++ b/Configs/Beta.xcconfig
@@ -13,3 +13,4 @@ CUSTOM_PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
 FACEBOOK_APP_ID = 788081084618097
 FACEBOOK_DISPLAY_NAME = Ketch Beta
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIconBeta
+URL_SCHEME = ketch-beta
