--- a/Configs/Prod.xcconfig
+++ b/Configs/Prod.xcconfig
@@ -12,3 +12,4 @@ CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
 FACEBOOK_APP_ID = 730107913748748
 FACEBOOK_DISPLAY_NAME = Ketch
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
+URL_SCHEME = ketch
