Switch Ketch Beta to use Ketch production facebook app. Add error checking to protect against the case where people have both app installed

--- a/Configs/Beta.xcconfig
+++ b/Configs/Beta.xcconfig
@@ -10,7 +10,7 @@ BUNDLE_IDENTIFIER = com.milasya.ketch.beta
 BUNDLE_DISPLAY_NAME = Ketch Beta
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
 CUSTOM_PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
-FACEBOOK_APP_ID = 788081084618097
+FACEBOOK_APP_ID = 730107913748748 // Ketch Prod on fb, because we need to open up for public beta
 FACEBOOK_DISPLAY_NAME = Ketch Beta
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIconBeta
 URL_SCHEME = ketch-beta
