--- a/Ketch.xcodeproj/xcshareddata/xcschemes/Ketch.xcscheme
+++ b/Ketch.xcodeproj/xcshareddata/xcschemes/Ketch.xcscheme
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,20 +16,6 @@
                BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
                BuildableName = "Ketch.app"
                BlueprintName = "Ketch"
-               ReferencedContainer = "container:Ketch.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
-               BuildableName = "KetchTests.xctest"
-               BlueprintName = "KetchTests"
                ReferencedContainer = "container:Ketch.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -91,8 +76,7 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
@@ -100,7 +84,7 @@
             BlueprintName = "Ketch"
             ReferencedContainer = "container:Ketch.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
