--- a/Configs/Prod.xcconfig
+++ b/Configs/Prod.xcconfig
@@ -9,7 +9,7 @@
 BUNDLE_IDENTIFIER = com.milasya.ketch
 BUNDLE_DISPLAY_NAME = Ketch
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
-FACEBOOK_APP_ID = 730107913748748
-FACEBOOK_DISPLAY_NAME = Ketch
+FACEBOOK_APP_ID = 788119904575103
+FACEBOOK_DISPLAY_NAME = Serendipity
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
 URL_SCHEME = ketch
