--- a/Configs/Dev.xcconfig
+++ b/Configs/Dev.xcconfig
@@ -1,9 +1,9 @@
 //
 //  Dev.xcconfig
-//  Ketch
+//  Taylr
 //
 //  Created by Tony Xiao on 2/28/15.
-//  Copyright (c) 2015 Ketch. All rights reserved.
+//  Copyright (c) 2015 S10 Inc. All rights reserved.
 //
 
 BUNDLE_IDENTIFIER = com.milasya.ketch.dev
