Rename module names in storyboard to Taylr. Removing unused strings

--- a/Taylr/Taylr-Info.plist
+++ b/Taylr/Taylr-Info.plist
@@ -51,9 +51,10 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>KetchIcon.otf</string>
-		<string>TransatTextMedium.otf</string>
+		<string>TransatTextLight.otf</string>
 		<string>TransatTextStandard.otf</string>
+		<string>TransatTextMedium.otf</string>
+		<string>TransatTextBold.otf</string>
 		<string>TransatTextBlack.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
