--- a/Configs/Beta.xcconfig
+++ b/Configs/Beta.xcconfig
@@ -10,7 +10,7 @@ BUNDLE_IDENTIFIER = com.milasya.ketch.beta
 BUNDLE_DISPLAY_NAME = Taylr β
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Distribution
 CUSTOM_PROVISIONING_PROFILE = 1398f865-130c-442d-b0a7-177c095afd2d
-FACEBOOK_APP_ID = 850283308358762 // Ketch Prod on fb, because we need to open up for public beta
+FACEBOOK_APP_ID = 850283308358762
 FACEBOOK_DISPLAY_NAME = Taylr β
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIconBeta
 URL_SCHEME = taylr-beta
