Adding basic tasks data structure and getting tests to compile and succeed

--- a/Taylr.xcodeproj/xcshareddata/xcschemes/Taylr.xcscheme
+++ b/Taylr.xcodeproj/xcshareddata/xcschemes/Taylr.xcscheme
@@ -32,8 +32,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
-               BuildableName = "TaylrTests.xctest"
-               BlueprintName = "TaylrTests"
+               BuildableName = "BackendTests.xctest"
+               BlueprintName = "BackendTests"
                ReferencedContainer = "container:Taylr.xcodeproj">
             </BuildableReference>
          </TestableReference>
