--- a/S10.xcodeproj/xcshareddata/xcschemes/BackendTests.xcscheme
+++ b/S10.xcodeproj/xcshareddata/xcschemes/BackendTests.xcscheme
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -8,15 +9,15 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
-               BuildableName = "Taylr.app"
-               BlueprintName = "Taylr"
-               ReferencedContainer = "container:Taylr.xcodeproj">
+               BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+               BuildableName = "BackendTests.xctest"
+               BlueprintName = "BackendTests"
+               ReferencedContainer = "container:S10.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,14 +28,24 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+               BuildableName = "BackendTests.xctest"
+               BlueprintName = "BackendTests"
+               ReferencedContainer = "container:S10.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
-            BuildableName = "Taylr.app"
-            BlueprintName = "Taylr"
-            ReferencedContainer = "container:Taylr.xcodeproj">
+            BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+            BuildableName = "BackendTests.xctest"
+            BlueprintName = "BackendTests"
+            ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -47,16 +58,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
-            BuildableName = "Taylr.app"
-            BlueprintName = "Taylr"
-            ReferencedContainer = "container:Taylr.xcodeproj">
+            BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+            BuildableName = "BackendTests.xctest"
+            BlueprintName = "BackendTests"
+            ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -69,10 +79,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
-            BuildableName = "Taylr.app"
-            BlueprintName = "Taylr"
-            ReferencedContainer = "container:Taylr.xcodeproj">
+            BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+            BuildableName = "BackendTests.xctest"
+            BlueprintName = "BackendTests"
+            ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
