--- a/S10.xcodeproj/xcshareddata/xcschemes/CoreTests.xcscheme
+++ b/S10.xcodeproj/xcshareddata/xcschemes/CoreTests.xcscheme
@@ -9,14 +9,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "EA5B74311B3139EA008E5CBC"
-               BuildableName = "Backend.framework"
-               BlueprintName = "Backend"
+               BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+               BuildableName = "CoreTests.xctest"
+               BlueprintName = "CoreTests"
                ReferencedContainer = "container:S10.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,13 +28,23 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+               BuildableName = "CoreTests.xctest"
+               BlueprintName = "CoreTests"
+               ReferencedContainer = "container:S10.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EA5B74311B3139EA008E5CBC"
-            BuildableName = "Backend.framework"
-            BlueprintName = "Backend"
+            BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+            BuildableName = "CoreTests.xctest"
+            BlueprintName = "CoreTests"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -51,9 +61,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EA5B74311B3139EA008E5CBC"
-            BuildableName = "Backend.framework"
-            BlueprintName = "Backend"
+            BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+            BuildableName = "CoreTests.xctest"
+            BlueprintName = "CoreTests"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -69,9 +79,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EA5B74311B3139EA008E5CBC"
-            BuildableName = "Backend.framework"
-            BlueprintName = "Backend"
+            BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+            BuildableName = "CoreTests.xctest"
+            BlueprintName = "CoreTests"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
