--- a/S10.xcodeproj/xcshareddata/xcschemes/TestApp.xcscheme
+++ b/S10.xcodeproj/xcshareddata/xcschemes/TestApp.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EA5B74051B30F7BB008E5CBC"
-               BuildableName = "Camera.app"
-               BlueprintName = "Camera"
+               BuildableName = "TestApp.app"
+               BlueprintName = "TestApp"
                ReferencedContainer = "container:S10.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -47,8 +47,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA5B74051B30F7BB008E5CBC"
-            BuildableName = "Camera.app"
-            BlueprintName = "Camera"
+            BuildableName = "TestApp.app"
+            BlueprintName = "TestApp"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -67,8 +67,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA5B74051B30F7BB008E5CBC"
-            BuildableName = "Camera.app"
-            BlueprintName = "Camera"
+            BuildableName = "TestApp.app"
+            BlueprintName = "TestApp"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -86,8 +86,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA5B74051B30F7BB008E5CBC"
-            BuildableName = "Camera.app"
-            BlueprintName = "Camera"
+            BuildableName = "TestApp.app"
+            BlueprintName = "TestApp"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
