Make it easy to run tests by attaching CoreTests to both Taylr and TestApp scheme

--- a/S10.xcodeproj/xcshareddata/xcschemes/TestApp.xcscheme
+++ b/S10.xcodeproj/xcshareddata/xcschemes/TestApp.xcscheme
@@ -20,20 +20,6 @@
                ReferencedContainer = "container:S10.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "EA5B741B1B30F7BB008E5CBC"
-               BuildableName = "CameraTests.xctest"
-               BlueprintName = "CameraTests"
-               ReferencedContainer = "container:S10.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -42,6 +28,16 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EA9F35511A74CC6900E0C65D"
+               BuildableName = "CoreTests.xctest"
+               BlueprintName = "CoreTests"
+               ReferencedContainer = "container:S10.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
