Update to custom version of SwiftBond with CoreData support

--- a/S10.xcodeproj/xcshareddata/xcschemes/Taylr.xcscheme
+++ b/S10.xcodeproj/xcshareddata/xcschemes/Taylr.xcscheme
@@ -76,7 +76,8 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EA9F35391A74CC6900E0C65D"
@@ -84,7 +85,7 @@
             BlueprintName = "Taylr"
             ReferencedContainer = "container:S10.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
